[project]
name = "casbin-redis-watcher"
version = "1.2.0"
authors = [
    {name = "nekotoxin", email = "nekotoxin@gmail.com"},
]
description = "Casbin role watcher to be used for monitoring updates to policies for PyCasbin"
readme = "README.md"
dynamic = ["dependencies"]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Home-page" = "https://github.com/pycasbin/redis-watcher"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 120